# bevy-astro

./: Cargo.toml
src/: main.rs  spawn_asteroids.rs  spawn_doublers.rs
